--- a/src/Venda.Api/appsettings.json
+++ b/src/Venda.Api/appsettings.json
@@ -6,5 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "mongodb://nosql.server",
+  "Database": "Loja",
+  "Pagamento": "http://localhost:5002/api/Pagamento",
+  "Estoque": "http://localhost:5000/api/Estoque",
+  "Produto": "http://localhost:5000/api/Produto ",
+  "ElasticApm": {
+    "ServerUrls": "http://localhost:8200",
+    "TransactionSampleRate": 1.0,
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+  }
 }
