--- a/src/Estoque.Api/appsettings.json
+++ b/src/Estoque.Api/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "mongodb://nosql.server",
+  "Database": "Loja",
+  "ElasticApm": {
+    "ServerUrls": "http://localhost:8200",
+    "TransactionSampleRate": 1.0,
+    "CaptureBody": "all",
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+  }
 }
