--- a/src/Pagamento.Api/appsettings.json
+++ b/src/Pagamento.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb://nosql.server",
+  "ConnectionString": "mongodb://localhost:17017",
   "Database": "Loja",
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
