ajuste na api de estoque

--- a/src/Estoque.Api/appsettings.json
+++ b/src/Estoque.Api/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "mongodb://nosql.server",
+  "ConnectionString2": "mongodb://localhost:17017",
   "Database": "Loja",
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
@@ -16,3 +17,4 @@
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   }
 }
+
