ajuste na api de vendas

--- a/src/Venda.Api/appsettings.json
+++ b/src/Venda.Api/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb://localhost:17017",
+  "ConnectionString": "mongodb://nosql.server",
+  "ConnectionString2": "mongodb://localhost:17017",
   "Database": "Loja",
   "Pagamento": "http://localhost:5002/api/Pagamento",
   "Estoque": "http://localhost:5000/api/Estoque",
