--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - elasticsearch
 
   pagamento.api:
+    container_name: pagamento-api
     image: pagamento-api
     ports:
       - "5002:80"
@@ -49,6 +50,7 @@ services:
       - elasticsearch
 
   venda.api:
+    container_name: venda-api
     image: venda-api
     ports:
       - "5004:80"
@@ -61,6 +63,7 @@ services:
       - elasticsearch
 
   estoque.api:
+    container_name: estoque-api
     image: estoque-api
     ports:
       - "5000:80"
