adicinando linha para start docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3.4'
+# docker-compose -f docker-compose.yml up -d --build
+# docker rmi $(docker images -q)
 
 services:
   elasticsearch:
