--- a/src/Estoque.Api/Estoque.Api.csproj
+++ b/src/Estoque.Api/Estoque.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Elastic.Apm.NetCoreAll" Version="1.7.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
