--- a/src/Estoque.Api/appsettings.json
+++ b/src/Estoque.Api/appsettings.json
@@ -12,7 +12,7 @@
   "ConnectionString2": "mongodb://localhost:17017",
   "Database": "Loja",
   "ElasticApm": {
-    "ServerUrls": "http://localhost:8200",
+    "ServerUrls": "http://apm-server:8200",
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
