--- a/src/Venda.Api/appsettings.json
+++ b/src/Venda.Api/appsettings.json
@@ -11,11 +11,11 @@
   "ConnectionString": "mongodb://nosql.server",
   "ConnectionString2": "mongodb://localhost:17017",
   "Database": "Loja",
-  "Pagamento": "http://localhost:5002/api/Pagamento",
-  "Estoque": "http://localhost:5000/api/Estoque",
-  "Produto": "http://localhost:5000/api/Produto",
+  "Pagamento": "http://pagamento-api/api/Pagamento",
+  "Estoque": "http://estoque-api/api/Estoque",
+  "Produto": "http://estoque-api/api/Produto",
   "ElasticApm": {
-    "ServerUrls": "http://localhost:8200",
+    "ServerUrls": "http://apm-server:8200",
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
