--- a/src/Pagamento.Api/appsettings.json
+++ b/src/Pagamento.Api/appsettings.json
@@ -11,7 +11,7 @@
   "ConnectionString": "mongodb://nosql.server",
   "Database": "Loja",
   "ElasticApm": {
-    "ServerUrls": "http://localhost:8200",
+    "ServerUrls": "http://apm-server:8200",
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
