--- a/src/Estoque.Api/Estoque.Api.csproj
+++ b/src/Estoque.Api/Estoque.Api.csproj
@@ -8,6 +8,9 @@
     <PackageReference Include="Elastic.Apm.NetCoreAll" Version="1.7.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.ElasticSearch" Version="8.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
