--- a/src/Estoque.Api/appsettings.json
+++ b/src/Estoque.Api/appsettings.json
@@ -16,6 +16,9 @@
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200/"
   }
 }
 
