--- a/src/Pagamento.Api/appsettings.json
+++ b/src/Pagamento.Api/appsettings.json
@@ -15,5 +15,8 @@
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200/"
   }
 }
