--- a/src/Venda.Api/appsettings.json
+++ b/src/Venda.Api/appsettings.json
@@ -19,5 +19,8 @@
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200/"
   }
 }
