--- a/src/Pagamento.Api/appsettings.json
+++ b/src/Pagamento.Api/appsettings.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": "mongodb://nosql.server",
+  "ConnectionString2": "mongodb://localhost:17017",
   "Database": "Loja",
   "ElasticApm": {
     "ServerUrls": "http://apm-server:8200",
@@ -17,6 +18,6 @@
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   },
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200/"
+    "Uri": "http://elasticsearch:9200/"
   }
 }
