--- a/src/Venda.Api/appsettings.json
+++ b/src/Venda.Api/appsettings.json
@@ -21,6 +21,6 @@
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   },
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200/"
+    "Uri": "http://elasticsearch:9200/"
   }
 }
