--- a/src/Estoque.Api/appsettings.json
+++ b/src/Estoque.Api/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ApplicationName": "elastic-search-app",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Elastic.Apm": "Debug"
+      "Override":{
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }      
     }
   },
   "AllowedHosts": "*",
@@ -18,7 +21,7 @@
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
   },
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200/"
+    "Uri": "http://elasticsearch:9200/"
   }
 }
 
