--- a/src/Pagamento.Api/appsettings.json
+++ b/src/Pagamento.Api/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ApplicationName": "elastic-search-app",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Elastic.Apm": "Debug"
+      "Override":{
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }      
     }
   },
   "AllowedHosts": "*",
