--- a/src/Venda.Api/Venda.Api.csproj
+++ b/src/Venda.Api/Venda.Api.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Elastic.Apm.NetCoreAll" Version="1.7.1" />
     <PackageReference Include="Elastic.Apm.SerilogEnricher" Version="1.5.1" />
+    <PackageReference Include="Elastic.CommonSchema.Serilog" Version="1.5.1" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.5" />
