--- a/src/Estoque.Api/Estoque.Api.csproj
+++ b/src/Estoque.Api/Estoque.Api.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Elastic.Apm.NetCoreAll" Version="1.7.1" />
     <PackageReference Include="Elastic.Apm.SerilogEnricher" Version="1.5.1" />
+    <PackageReference Include="Elastic.CommonSchema.Serilog" Version="1.5.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
     <PackageReference Include="Serilog" Version="2.10.0" />
