--- a/src/Estoque.Api/appsettings.json
+++ b/src/Estoque.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApplicationName": "elastic-search-app",
+  "ApplicationName": "app-apm-log",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
