--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3.4'
+# Referencia 
+# https://github.com/elastic/stack-docker/blob/master/docker-compose.yml
 # docker-compose -f docker-compose.yml up -d --build
 # docker rmi $(docker images -q)
 
@@ -82,3 +84,52 @@ services:
     image: mongo
     ports:
       - "17017:27017"
+
+  heartbeat:
+    image: docker.elastic.co/beats/heartbeat:7.9.3
+    container_name: heartbeat
+    command: --strict.perms=false -e  # -e flag to log to stderr and disable syslog/file output
+    secrets:
+      - source: heartbeat.yml
+        target: /usr/share/heartbeat/heartbeat.yml
+    volumes:
+      - './scripts/setup-beat.sh:/usr/local/bin/setup-beat.sh:ro'
+    depends_on: ['elasticsearch', 'kibana']
+    healthcheck:
+      test: heartbeat test config
+      interval: 30s
+      timeout: 15s
+      retries: 5
+
+  metricbeat:
+    image: docker.elastic.co/beats/metricbeat:7.9.3
+    container_name: metricbeat
+    # The commented sections below enable Metricbeat to monitor the Docker host,
+    # rather than the Metricbeat container. It's problematic with Docker for
+    # Windows, however, since "/proc", "/sys" etc. don't exist on Windows.
+    # The same likely applies to OSX (needs testing).
+    # volumes:
+    #   - /proc:/hostfs/proc:ro
+    #   - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
+    #   - /:/hostfs:ro
+    command: --strict.perms=false -e  # -e flag to log to stderr and disable syslog/file output
+    secrets:
+      - source: metricbeat.yml
+        target: /usr/share/metricbeat/metricbeat.yml
+    volumes:
+      - /proc:/hostfs/proc:ro
+      - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
+      - /:/hostfs:ro
+      - './scripts/setup-beat.sh:/usr/local/bin/setup-beat.sh:ro'
+    depends_on: ['elasticsearch', 'kibana']
+    healthcheck:
+      test: metricbeat test config
+      interval: 30s
+      timeout: 15s
+      retries: 5
+
+secrets:
+  heartbeat.yml:
+    file: ./heartbeat.yml
+  metricbeat.yml:
+    file: ./metricbeat.yml
